Change description from 'libraries' to 'books'

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <header class="header">
       <div>
         <h1>Contumance library</h1>
-        <p class="desc">my libraries</p>
+        <p class="desc">my books</p>
       </div>
       <button class="theme-toggle" id="themeToggle" type="button" aria-label="Cambiar tema" title="Cambiar tema">◑</button>
     </header>
@@ -101,6 +101,7 @@
       <ul class="index">
         <li><a href="the-chords-book.html">The chords book</a></li>
         <li><a href="the-scales-book.html">The scales book</a></li>
+        <li><a href="the-daily-chord.html">The daily chord</a></li>
       </ul>
     </nav>
 
