--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -11,16 +11,10 @@
       --paper: #f5f1e8; --ink:#2f2a1e; --muted:#6b6253; --accent:#a08a63; --rule:#d8d2c2;
       --link:#2d5842; --link-visited:#514f7a; --maxw:42rem; --lh:1.6; --fs:18px;
       --dot-border: rgba(0,0,0,.35);
-      /* capas por inversión (solo grises) */
-      --vx0: rgba(0,0,0,.12); /* root pos */
-      --vx1: rgba(0,0,0,.18);
-      --vx2: rgba(0,0,0,.26);
-      --vx3: rgba(0,0,0,.34);
     }
     html.theme-dark{
       --paper:#10110f; --ink:#dbd6c9; --muted:#a39c8c; --accent:#2a2b27; --rule:#2a2b27;
       --link:#a9d0b8; --link-visited:#c0b8e0; --dot-border: rgba(255,255,255,.35);
-      --vx0: rgba(255,255,255,.10); --vx1: rgba(255,255,255,.14); --vx2: rgba(255,255,255,.18); --vx3: rgba(255,255,255,.22);
     }
 
     html{ font-size:var(--fs); }
@@ -75,27 +69,21 @@
     .dot{ width:24px; height:24px; border-radius:999px; border:1.5px solid var(--dot-border); background:transparent; display:flex; align-items:center; justify-content:center; font-size:11px; }
     .dot.root{ background:var(--ink); color:var(--paper); border-color:var(--ink); font-weight:600; }
 
-    /* ===== Nueva estrategia de inversiones: marcar células específicas ===== */
-    .vx{ position:absolute; inset:2px; border-radius:6px; z-index:1; /* detrás del punto */ border:1px dashed var(--accent); mix-blend-mode:multiply; }
-    /* escala de grises por inversión */
-    .inv0{ background:var(--vx0); }
-    .inv1{ background:repeating-linear-gradient(45deg, var(--vx1) 0 6px, transparent 6px 12px); }
-    .inv2{ background:repeating-linear-gradient(135deg, var(--vx2) 0 6px, transparent 6px 12px); }
-    .inv3{ background:repeating-linear-gradient(45deg, var(--vx3) 0 6px, transparent 6px 9px),
-            repeating-linear-gradient(135deg, var(--vx3) 0 6px, transparent 6px 9px); }
-    /* insignia mini de inversión */
-    .vx-badge{ position:absolute; top:3px; left:4px; font-size:10px; color:var(--muted); z-index:3; pointer-events:none; }
+    /* ===== NUEVA estrategia: contornos por voicing (sin relleno) ===== */
+    .voicing{ position:absolute; z-index:1; background:transparent; border-radius:8px; }
+    .inv0{ border:2px solid var(--accent); }           /* Root: línea sólida */
+    .inv1{ border:2px dashed var(--accent); }          /* 1ª: guiones */
+    .inv2{ border:2px dotted var(--accent); }          /* 2ª: punteado */
+    .inv3{ border:2px dashed var(--accent); border-image: repeating-linear-gradient(90deg, var(--accent) 0 6px, transparent 6px 10px) 1; } /* 3ª: dash-dot sugerido */
+    .tag{ position:absolute; top:-10px; left:6px; font-size:10px; color:var(--muted); background:var(--paper); padding:0 4px; border-radius:4px; }
 
     .legend{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; font-size:12px; color:var(--muted); margin:8px 0 0; }
     .chip{ display:inline-flex; align-items:center; gap:6px; }
-    .chip i{ width:18px; height:12px; border-radius:4px; display:inline-block; border:1px dashed var(--accent); }
-    .chip.root i{ background:var(--vx0);} 
-    .chip.inv1 i{ background:repeating-linear-gradient(45deg, var(--vx1) 0 6px, transparent 6px 12px); }
-    .chip.inv2 i{ background:repeating-linear-gradient(135deg, var(--vx2) 0 6px, transparent 6px 12px); }
-    .chip.inv3 i{ background:
-      repeating-linear-gradient(45deg, var(--vx3) 0 6px, transparent 6px 9px),
-      repeating-linear-gradient(135deg, var(--vx3) 0 6px, transparent 6px 9px);
-    }
+    .chip i{ width:26px; height:12px; border-radius:4px; display:inline-block; }
+    .chip.root i{ border:2px solid var(--accent); }
+    .chip.inv1 i{ border:2px dashed var(--accent); }
+    .chip.inv2 i{ border:2px dotted var(--accent); }
+    .chip.inv3 i{ border:2px dashed var(--accent); border-image: repeating-linear-gradient(90deg, var(--accent) 0 6px, transparent 6px 10px) 1; }
 
     @media (prefers-reduced-motion:no-preference){
       a{ position:relative; background-image:linear-gradient(currentColor,currentColor); background-position:0 100%; background-repeat:no-repeat; background-size:0% 1px; transition:background-size .25s ease, color .2s ease; }
@@ -112,7 +100,7 @@
 
     <header>
       <h1>The Chords Book</h1>
-      <div class="subtitle">Elegí tónica y tipo de acorde. Se marcan todas las inversiones posibles en cada celda (sin overlays enormes).</div>
+      <div class="subtitle">Elegí tónica y tipo de acorde. Se muestran contornos por voicing (root/1ª/2ª/3ª) sin tapar el contenido.</div>
     </header>
 
     <details class="panel" open>
@@ -191,7 +179,7 @@
   </script>
 
   <script>
-  // ===== Lógica de acordes con marcador por celda =====
+  // ===== Lógica de acordes (contornos por voicing) =====
   (function(){
     const NOTES=["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"];
     const CHORDS={
@@ -212,8 +200,8 @@
     const FRETS=24;
 
     const state={ strings:6, tuning:DEFAULT_TUNING_6.slice(), root:'C', chordName:'Major (maj)', labels:'notes', stringsUsed:4, span:4 };
-    try{ const s=JSON.parse(localStorage.getItem('the_chords_book_state_v3')||'null'); if(s) Object.assign(state,s);}catch(e){}
-    function save(){ localStorage.setItem('the_chords_book_state_v3', JSON.stringify(state)); }
+    try{ const s=JSON.parse(localStorage.getItem('the_chords_book_state_v4')||'null'); if(s) Object.assign(state,s);}catch(e){}
+    function save(){ localStorage.setItem('the_chords_book_state_v4', JSON.stringify(state)); }
 
     // DOM refs
     const board=document.getElementById('board');
@@ -229,10 +217,7 @@
     // Helpers
     const idx = n => NOTES.indexOf(n);
     const wrap = n => (n+12)%12;
-    function ensureTuningLen(n){
-      if(state.tuning.length<n){ let last=state.tuning[state.tuning.length-1]||'E'; while(state.tuning.length<n) state.tuning.push(last); }
-      else if(state.tuning.length>n){ state.tuning=state.tuning.slice(0,n); }
-    }
+    function ensureTuningLen(n){ if(state.tuning.length<n){ let last=state.tuning[state.tuning.length-1]||'E'; while(state.tuning.length<n) state.tuning.push(last);} else if(state.tuning.length>n){ state.tuning=state.tuning.slice(0,n);} }
 
     function fillSelect(el, arr){ el.innerHTML=arr.map(v=>`<option value="${v}">${v}</option>`).join(''); }
     fillSelect(rootSel, NOTES); rootSel.value=state.root;
@@ -283,7 +268,6 @@
       }
     }
 
-    // Pinta las notas del acorde (para referencia visual)
     function renderChordDots(){
       const chord=CHORDS[state.chordName]; const rootIdx=idx(state.root); const set=new Set(chord.map(wrap));
       for(let s=0; s<state.strings; s++){
@@ -291,7 +275,7 @@
         for(let f=1; f<=FRETS; f++){
           const pc=wrap(openIdx+f); const rel=wrap(pc-rootIdx);
           if(set.has(rel)){
-            const cell = board.children[s].children[f]; // string row -> cell f (0 is nut)
+            const cell = board.children[s].children[f];
             const m=document.createElement('div'); m.className='marker'; const d=document.createElement('div'); d.className='dot';
             if(rel===0) d.classList.add('root');
             let lbl=''; if(state.labels==='notes') lbl=NOTES[pc]; else if(state.labels==='degrees') lbl=DEG[rel]||'';
@@ -301,15 +285,15 @@
       }
     }
 
-    // Encuentra voicings y marca CELDAS específicas con patrón gris por inversión
-    function markInversions(){
+    // Encuentra voicings y dibuja CONTORNOS (sin relleno)
+    function drawVoicingContours(){
       const chord=CHORDS[state.chordName]; const rootIdx=idx(state.root); const set=new Set(chord.map(wrap));
       const used=state.stringsUsed|0; const span=state.span|0;
+
       for(let s0=0; s0<=state.strings-used; s0++){
         const s1=s0+used-1;
         for(let f0=1; f0<=FRETS-span; f0++){
-          const chosen=[]; // {s,f,pc,rel}
-          let ok=true;
+          const chosen=[]; let ok=true;
           for(let s=s0; s<=s1; s++){
             const openIdx=idx(state.tuning[s]); let found=null;
             for(let f=f0; f<=f0+span; f++){
@@ -320,17 +304,21 @@
             chosen.push(found);
           }
           if(!ok) continue;
-          const uniq = new Set(chosen.map(c=>c.rel));
-          if(uniq.size < Math.min(3, set.size)) continue; // debe tener 3 grados diferentes mínimo
-          // Inversión por bajo (cuerda más grave = índice mayor)
+          const uniq=new Set(chosen.map(c=>c.rel));
+          if(uniq.size < Math.min(3, set.size)) continue;
           const bass = chosen.reduce((a,b)=> a.s>b.s?a:b);
           const invIdx = Math.max(0, Math.min(chord.findIndex(iv=>wrap(iv)===bass.rel),3));
-          // Marcar celdas elegidas
-          chosen.forEach(c=>{
-            const cell = board.children[c.s].children[c.f];
-            const vx = document.createElement('div'); vx.className = 'vx inv'+invIdx; cell.appendChild(vx);
-            const badge = document.createElement('div'); badge.className='vx-badge'; badge.textContent = invIdx===0?'Root':(invIdx===1?'1ª':(invIdx===2?'2ª':'3ª')); cell.appendChild(badge);
-          });
+
+          // Calcular caja (min/max fret incluidos en chosen)
+          const minF = Math.min(...chosen.map(c=>c.f));
+          const maxF = Math.max(...chosen.map(c=>c.f));
+          const el=document.createElement('div'); el.className='voicing inv'+invIdx;
+          // grid: col 1 = nuez; traste N ➜ columna N+1. end es exclusivo, por eso +2
+          el.style.gridColumn = (minF+1) + ' / ' + (maxF+2);
+          el.style.gridRow = (s0+1) + ' / ' + (s1+2);
+          const tg=document.createElement('span'); tg.className='tag'; tg.textContent = invIdx===0?'Root':(invIdx===1?'1ª':(invIdx===2?'2ª':'3ª'));
+          el.appendChild(tg);
+          board.appendChild(el);
         }
       }
     }
@@ -338,7 +326,7 @@
     function renderAll(){
       renderBoardBase();
       renderChordDots();
-      markInversions();
+      drawVoicingContours();
       save();
     }
 
@@ -351,16 +339,8 @@
     applyBtn.addEventListener('click',()=>{ const n=Math.max(3,Math.min(10,parseInt(stringCountInput.value||6,10))); state.strings=n; ensureTuningLen(n); renderTuningEditor(); renderAll(); });
 
     // Init
-    ;(function init(){
-      // llenar selects
-      function fill(el, arr){ el.innerHTML = arr.map(v=>`<option value="${v}">${v}</option>`).join(''); }
-      fill(rootSel, NOTES); rootSel.value=state.root;
-      fill(chordSel, Object.keys(CHORDS)); chordSel.value=state.chordName;
-      labelsSel.value=state.labels; stringsUsedSel.value=String(state.stringsUsed); spanSel.value=String(state.span);
-      stringCountInput.value=state.strings;
-      renderTuningEditor();
-      renderAll();
-    })();
+    renderTuningEditor();
+    renderAll();
   })();
   </script>
 </body>
