--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -4,27 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Chords Book — Contumance</title>
-  <meta name="description" content="The Chords Book — inversiones de acordes a lo largo del diapasón, con estética e‑ink." />
+  <meta name="description" content="The Chords Book — visualiza en el diapasón únicamente las notas de un acorde, con estética e‑ink." />
   <style>
     /* ===== Estética Kindle ===== */
-    :root {
-      --paper: #f5f1e8; --ink:#2f2a1e; --muted:#6b6253; --accent:#a08a63; --rule:#d8d2c2;
-      --link:#2d5842; --link-visited:#514f7a; --maxw:42rem; --lh:1.6; --fs:18px;
-      --dot-border: rgba(0,0,0,.35);
-    }
-    html.theme-dark{
-      --paper:#10110f; --ink:#dbd6c9; --muted:#a39c8c; --accent:#2a2b27; --rule:#2a2b27;
-      --link:#a9d0b8; --link-visited:#c0b8e0; --dot-border: rgba(255,255,255,.35);
-    }
+    :root { --paper:#f5f1e8; --ink:#2f2a1e; --muted:#6b6253; --accent:#a08a63; --rule:#d8d2c2; --link:#2d5842; --link-visited:#514f7a; --maxw:42rem; --lh:1.6; --fs:18px; --dot-border: rgba(0,0,0,.35); }
+    html.theme-dark{ --paper:#10110f; --ink:#dbd6c9; --muted:#a39c8c; --accent:#2a2b27; --rule:#2a2b27; --link:#a9d0b8; --link-visited:#c0b8e0; --dot-border: rgba(255,255,255,.35); }
 
     html{ font-size:var(--fs); }
-    body{ margin:0; color:var(--ink); background:var(--paper); line-height:var(--lh);
-      font-family: ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif;
-      text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased; }
-    body::before{ content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
-      background-image: radial-gradient(circle at 25% 15%, #000 .5px, transparent .5px),
-                        radial-gradient(circle at 75% 85%, #000 .5px, transparent .5px);
-      background-size:3px 3px, 3px 3px; mix-blend-mode:multiply; }
+    body{ margin:0; color:var(--ink); background:var(--paper); line-height:var(--lh); font-family: ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif; text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased; }
+    body::before{ content:""; position:fixed; inset:0; pointer-events:none; opacity:.06; background-image: radial-gradient(circle at 25% 15%, #000 .5px, transparent .5px), radial-gradient(circle at 75% 85%, #000 .5px, transparent .5px); background-size:3px 3px, 3px 3px; mix-blend-mode:multiply; }
 
     main{ max-width:var(--maxw); margin:0 auto; padding:7vh 1.25rem 4rem; }
     .topbar{ display:flex; justify-content:space-between; align-items:center; gap:1rem; margin-bottom:1rem; }
@@ -32,8 +20,7 @@
     h1{ margin:.2rem 0 .3rem; font-weight:600; font-size:clamp(1.6rem,4vw,2.2rem); }
     .subtitle{ color:var(--muted); font-size:.95rem; margin-bottom:.8rem; }
 
-    .theme-toggle{ border:1px solid var(--accent); background:transparent; color:var(--ink);
-      border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.1rem; line-height:1; }
+    .theme-toggle{ border:1px solid var(--accent); background:transparent; color:var(--ink); border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.1rem; line-height:1; }
     .theme-toggle:focus-visible{ outline:2px dashed var(--accent); outline-offset:2px; }
 
     details.panel{ border:1px solid var(--accent); border-radius:.6rem; background:rgba(255,255,255,.6); }
@@ -45,8 +32,7 @@
     .controls{ display:grid; gap:8px; align-items:center; grid-template-columns: repeat(auto-fit, minmax(160px,1fr)); }
     .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
     label{ font-size:12px; opacity:.9; }
-    select, button, input[type="number"]{ appearance:none; border:1px solid var(--accent); background:transparent; color:var(--ink);
-      padding:10px 12px; border-radius:.5rem; font:inherit; line-height:1; min-width:0; }
+    select, button, input[type="number"]{ appearance:none; border:1px solid var(--accent); background:transparent; color:var(--ink); padding:10px 12px; border-radius:.5rem; font:inherit; line-height:1; min-width:0; }
     button.primary{ background:var(--ink); color:var(--paper); border-color:var(--ink); }
 
     .tuning{ display:grid; gap:8px; grid-template-columns: repeat(auto-fit, minmax(180px,1fr)); }
@@ -64,31 +50,10 @@
     .cell{ position:relative; display:flex; align-items:center; justify-content:center; }
     .fret-number{ position:absolute; bottom:2px; right:6px; font-size:10px; opacity:.35; }
 
-    /* Notas */
-    .marker{ position:absolute; inset:0; display:flex; align-items:center; justify-content:center; pointer-events:none; z-index:2; }
-    .dot{ width:24px; height:24px; border-radius:999px; border:1.5px solid var(--dot-border); background:transparent; display:flex; align-items:center; justify-content:center; font-size:11px; }
+    /* Notas del acorde */
+    .marker{ position:absolute; inset:0; display:flex; align-items:center; justify-content:center; pointer-events:none; }
+    .dot{ width:26px; height:26px; border-radius:999px; border:1.5px solid var(--dot-border); background:transparent; display:flex; align-items:center; justify-content:center; font-size:12px; }
     .dot.root{ background:var(--ink); color:var(--paper); border-color:var(--ink); font-weight:600; }
-
-    /* ===== NUEVA estrategia: contornos por voicing (sin relleno) ===== */
-    .voicing{ position:absolute; z-index:1; background:transparent; border-radius:8px; }
-    .inv0{ border:2px solid var(--accent); }           /* Root: línea sólida */
-    .inv1{ border:2px dashed var(--accent); }          /* 1ª: guiones */
-    .inv2{ border:2px dotted var(--accent); }          /* 2ª: punteado */
-    .inv3{ border:2px dashed var(--accent); border-image: repeating-linear-gradient(90deg, var(--accent) 0 6px, transparent 6px 10px) 1; } /* 3ª: dash-dot sugerido */
-    .tag{ position:absolute; top:-10px; left:6px; font-size:10px; color:var(--muted); background:var(--paper); padding:0 4px; border-radius:4px; }
-
-    .legend{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; font-size:12px; color:var(--muted); margin:8px 0 0; }
-    .chip{ display:inline-flex; align-items:center; gap:6px; }
-    .chip i{ width:26px; height:12px; border-radius:4px; display:inline-block; }
-    .chip.root i{ border:2px solid var(--accent); }
-    .chip.inv1 i{ border:2px dashed var(--accent); }
-    .chip.inv2 i{ border:2px dotted var(--accent); }
-    .chip.inv3 i{ border:2px dashed var(--accent); border-image: repeating-linear-gradient(90deg, var(--accent) 0 6px, transparent 6px 10px) 1; }
-
-    @media (prefers-reduced-motion:no-preference){
-      a{ position:relative; background-image:linear-gradient(currentColor,currentColor); background-position:0 100%; background-repeat:no-repeat; background-size:0% 1px; transition:background-size .25s ease, color .2s ease; }
-      a:hover, a:focus-visible{ background-size:100% 1px; outline:none; }
-    }
   </style>
 </head>
 <body>
@@ -100,7 +65,7 @@
 
     <header>
       <h1>The Chords Book</h1>
-      <div class="subtitle">Elegí tónica y tipo de acorde. Se muestran contornos por voicing (root/1ª/2ª/3ª) sin tapar el contenido.</div>
+      <div class="subtitle">Visualización limpia: se muestran únicamente las notas del acorde en el diapasón. Sin ayudas ni overlays.</div>
     </header>
 
     <details class="panel" open>
@@ -128,31 +93,8 @@
               <option value="off">Ocultas</option>
             </select>
           </div>
-          <div class="row">
-            <label for="stringsUsed">Notas por voicing</label>
-            <select id="stringsUsed">
-              <option value="3">3</option>
-              <option value="4" selected>4</option>
-              <option value="5">5</option>
-            </select>
-          </div>
-          <div class="row">
-            <label for="span">Rango de trastes (máx)</label>
-            <select id="span">
-              <option value="3">3</option>
-              <option value="4" selected>4</option>
-              <option value="5">5</option>
-            </select>
-          </div>
         </div>
-
         <div id="tuningPanel" class="tuning"></div>
-        <div class="legend" aria-hidden="true">
-          <span class="chip root"><i></i>Root pos.</span>
-          <span class="chip inv1"><i></i>1ª inv.</span>
-          <span class="chip inv2"><i></i>2ª inv.</span>
-          <span class="chip inv3"><i></i>3ª inv.</span>
-        </div>
       </div>
     </details>
 
@@ -179,7 +121,7 @@
   </script>
 
   <script>
-  // ===== Lógica de acordes (contornos por voicing) =====
+  // ===== Lógica de acordes: solo puntos del acorde =====
   (function(){
     const NOTES=["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"];
     const CHORDS={
@@ -199,17 +141,15 @@
     const DEFAULT_TUNING_6=["E","B","G","D","A","E"]; // 1ª aguda arriba
     const FRETS=24;
 
-    const state={ strings:6, tuning:DEFAULT_TUNING_6.slice(), root:'C', chordName:'Major (maj)', labels:'notes', stringsUsed:4, span:4 };
-    try{ const s=JSON.parse(localStorage.getItem('the_chords_book_state_v4')||'null'); if(s) Object.assign(state,s);}catch(e){}
-    function save(){ localStorage.setItem('the_chords_book_state_v4', JSON.stringify(state)); }
+    const state={ strings:6, tuning:DEFAULT_TUNING_6.slice(), root:'C', chordName:'Major (maj)', labels:'notes' };
+    try{ const s=JSON.parse(localStorage.getItem('the_chords_book_state_clean')||'null'); if(s) Object.assign(state,s);}catch(e){}
+    function save(){ localStorage.setItem('the_chords_book_state_clean', JSON.stringify(state)); }
 
     // DOM refs
     const board=document.getElementById('board');
     const rootSel=document.getElementById('root');
     const chordSel=document.getElementById('chord');
     const labelsSel=document.getElementById('labels');
-    const stringsUsedSel=document.getElementById('stringsUsed');
-    const spanSel=document.getElementById('span');
     const stringCountInput=document.getElementById('stringCount');
     const applyBtn=document.getElementById('applyStrings');
     const tuningPanel=document.getElementById('tuningPanel');
@@ -222,8 +162,7 @@
     function fillSelect(el, arr){ el.innerHTML=arr.map(v=>`<option value="${v}">${v}</option>`).join(''); }
     fillSelect(rootSel, NOTES); rootSel.value=state.root;
     fillSelect(chordSel, Object.keys(CHORDS)); chordSel.value=state.chordName;
-    labelsSel.value=state.labels; stringsUsedSel.value=String(state.stringsUsed); spanSel.value=String(state.span);
-    stringCountInput.value=state.strings;
+    labelsSel.value=state.labels; stringCountInput.value=state.strings;
 
     // Editor de afinación
     function cycle(note, step){ let i=idx(note); if(i<0) i=0; return NOTES[wrap(i+step)]; }
@@ -252,14 +191,14 @@
       }));
     }
 
-    // Render del diapasón y puntos del acorde
+    // Render del diapasón vacío
     function renderBoardBase(){
       board.innerHTML='';
       for(let s=0;s<state.strings;s++){
         const row=document.createElement('div'); row.className='string';
         const nut=document.createElement('div'); nut.className='nut cell'; if(s>0) nut.style.borderTop='1px solid var(--rule)';
         nut.innerHTML=`<span>${state.tuning[s]}</span>`; row.appendChild(nut);
-        for(let f=1; f<=24; f++){
+        for(let f=1; f<=FRETS; f++){
           const cell=document.createElement('div'); cell.className='fret cell'; if(s>0) cell.style.borderTop='1px solid var(--rule)';
           row.appendChild(cell);
           if(s===state.strings-1){ const num=document.createElement('div'); num.className='fret-number'; num.textContent=f; cell.appendChild(num); }
@@ -268,6 +207,7 @@
       }
     }
 
+    // Pinta solo las notas del acorde
     function renderChordDots(){
       const chord=CHORDS[state.chordName]; const rootIdx=idx(state.root); const set=new Set(chord.map(wrap));
       for(let s=0; s<state.strings; s++){
@@ -285,57 +225,12 @@
       }
     }
 
-    // Encuentra voicings y dibuja CONTORNOS (sin relleno)
-    function drawVoicingContours(){
-      const chord=CHORDS[state.chordName]; const rootIdx=idx(state.root); const set=new Set(chord.map(wrap));
-      const used=state.stringsUsed|0; const span=state.span|0;
-
-      for(let s0=0; s0<=state.strings-used; s0++){
-        const s1=s0+used-1;
-        for(let f0=1; f0<=FRETS-span; f0++){
-          const chosen=[]; let ok=true;
-          for(let s=s0; s<=s1; s++){
-            const openIdx=idx(state.tuning[s]); let found=null;
-            for(let f=f0; f<=f0+span; f++){
-              const pc=wrap(openIdx+f); const rel=wrap(pc-rootIdx);
-              if(set.has(rel)){ found={s,f,pc,rel}; break; }
-            }
-            if(!found){ ok=false; break; }
-            chosen.push(found);
-          }
-          if(!ok) continue;
-          const uniq=new Set(chosen.map(c=>c.rel));
-          if(uniq.size < Math.min(3, set.size)) continue;
-          const bass = chosen.reduce((a,b)=> a.s>b.s?a:b);
-          const invIdx = Math.max(0, Math.min(chord.findIndex(iv=>wrap(iv)===bass.rel),3));
-
-          // Calcular caja (min/max fret incluidos en chosen)
-          const minF = Math.min(...chosen.map(c=>c.f));
-          const maxF = Math.max(...chosen.map(c=>c.f));
-          const el=document.createElement('div'); el.className='voicing inv'+invIdx;
-          // grid: col 1 = nuez; traste N ➜ columna N+1. end es exclusivo, por eso +2
-          el.style.gridColumn = (minF+1) + ' / ' + (maxF+2);
-          el.style.gridRow = (s0+1) + ' / ' + (s1+2);
-          const tg=document.createElement('span'); tg.className='tag'; tg.textContent = invIdx===0?'Root':(invIdx===1?'1ª':(invIdx===2?'2ª':'3ª'));
-          el.appendChild(tg);
-          board.appendChild(el);
-        }
-      }
-    }
-
-    function renderAll(){
-      renderBoardBase();
-      renderChordDots();
-      drawVoicingContours();
-      save();
-    }
+    function renderAll(){ renderBoardBase(); renderChordDots(); save(); }
 
     // Eventos
     rootSel.addEventListener('change',()=>{ state.root=rootSel.value; renderAll(); });
     chordSel.addEventListener('change',()=>{ state.chordName=chordSel.value; renderAll(); });
     labelsSel.addEventListener('change',()=>{ state.labels=labelsSel.value; renderAll(); });
-    stringsUsedSel.addEventListener('change',()=>{ state.stringsUsed=+stringsUsedSel.value; renderAll(); });
-    spanSel.addEventListener('change',()=>{ state.span=+spanSel.value; renderAll(); });
     applyBtn.addEventListener('click',()=>{ const n=Math.max(3,Math.min(10,parseInt(stringCountInput.value||6,10))); state.strings=n; ensureTuningLen(n); renderTuningEditor(); renderAll(); });
 
     // Init
